syntax = "proto3";

package org.example.grpc;

option java_multiple_files = true;
option java_package = "org.example.grpc";

// The greeting service definition.
service GreetingService {
    rpc Greet (GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
    string name = 1;
}

// The response message containing the greetings
message GreetingResponse {
    string reply = 1;
}